--- a/index.html
+++ b/index.html
@@ -43,22 +43,37 @@
             </div>
             <div class="carousel-inner">
               <div class="carousel-item active" data-bs-interval="10000">
-                <img src="archivos/slider2.jpg" class="d-block w-100 h-40">
+                <img src="archivos/carou2.jpg" class="d-block w-100">
               </div>
               <div class="carousel-item" data-bs-interval="2000">
-                <img src="archivos/slider1.jpg" class="d-block w-100">
+                <img src="archivos/carou1.jpg" class="d-block w-100">
               </div>
               <div class="carousel-item">
-                <img src="archivos/slider3.jpg" class="d-block w-100">
+                <img src="archivos/carou3.jpg" class="d-block w-100">
               </div>
               <div class="carousel-item">
-                <img src="archivos/slider4.jpg" class="d-block w-100">
+                <img src="archivos/carou4.jpg" class="d-block w-100">
               </div>
               <div class="carousel-item">
-                <img src="archivos/slider5.jpg" class="d-block w-100">
+                <img src="archivos/carou5.jpg" class="d-block w-100">
               </div>
               <div class="carousel-item">
-                <img src="archivos/slider6.jpg" class="d-block w-100">
+                <img src="archivos/carou6.jpg" class="d-block w-100">
+              </div>
+              <div class="carousel-item">
+                <img src="archivos/carou7.jpg" class="d-block w-100">
+              </div>
+              <div class="carousel-item">
+                <img src="archivos/carou8.jpg" class="d-block w-100">
+              </div>
+              <div class="carousel-item">
+                <img src="archivos/carou9.jpg" class="d-block w-100">
+              </div>
+              <div class="carousel-item">
+                <img src="archivos/carou10.jpg" class="d-block w-100">
+              </div>
+              <div class="carousel-item">
+                <img src="archivos/carou11.jpg" class="d-block w-100">
               </div>
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="prev">
